@@ -706,7 +706,7 @@ OmQuery boolquery(OM_MOP_FILTER, OmQuery(), query);
 </LI></UL>
 
 The boolquery will return a set of documents matching the criteria supplied:
-each document in the result set will have a weight of 1.
+each document in the result set will have a weight of 0.
 </P>
 
 <H2>Retrieving the results of a query</H2>
