@@ -543,76 +543,3 @@ LeafMatch::match(om_doccount first,
     delete query;
     query = NULL;
 }
-
-// This method runs the query, generating the M set, but doesn't calcualate
-// any weights (all weights in result are set to 1)
-void
-LeafMatch::boolmatch(om_doccount first, om_doccount maxitems,
-		   vector<OmMSetItem> &mset)
-{
-    // Prepare query
-    mset.clear();
-
-    if(query == NULL) return;
-    if(maxitems == 0) return;
-
-    DebugMsg("match.boolmatch(" << query->intro_term_description() << ")" << endl);
-
-    om_doccount max_msize = first + maxitems;
-
-    map<OmKey, OmMSetItem> collapse_table;
-
-    // Perform query
-    while(mset.size() < max_msize) {
-	PostList *ret = query->next(0);
-	if (ret) {
-	    delete query;
-	    query = ret;
-
-	    DebugMsg("*** REPLACING ROOT" << endl);
-	}
-
-	if (query->at_end()) break;
-
-	om_docid did = query->get_docid();
-	bool add_item = true;
-	OmMSetItem new_item(1.0, did);
-
-	// Item has high enough weight to go in MSet: do collapse if wanted
-	if(do_collapse) {
-	    LeafDocument * irdoc = database->open_document(did);
-	    OmKey irkey = irdoc->get_key(collapse_key);
-	    map<OmKey, OmMSetItem>::iterator oldkey;
-	    oldkey = collapse_table.find(irkey);
-	    if(oldkey == collapse_table.end()) {
-		DebugMsg("collapsem: new key: " << irkey.value << endl);
-		// Key not been seen before
-		collapse_table.insert(pair<OmKey, OmMSetItem>(irkey, new_item));
-	    } else {
-		DebugMsg("collapsem: already exists: " << irkey.value << endl);
-		// There's already a better match with this key
-		add_item = false;
-	    }
-	}
-
-	if(add_item) {
-	    mset.push_back(new_item);
-	}
-    }
-
-    Assert (mset.size() <= max_msize);
-
-    if(first > 0) {
-	// Remove unwanted leading entries
-	if(mset.size() <= first) {
-	    mset.clear();
-	} else {
-	    // erase the leading ``first'' elements
-	    mset.erase(mset.begin(), mset.begin() + first);
-	}
-    }
-
-    DebugMsg("msize = " << mset.size() << endl);
-    delete query;
-    query = NULL;
-}
