@@ -220,77 +220,3 @@ MultiMatch::match(om_doccount first,
 	*greatest_wt = tot_greatest_wt;
     }
 }
-
-
-// FIXME: this is a bad copy of match - factor out.
-void
-MultiMatch::boolmatch(om_doccount first,
-		      om_doccount maxitems,
-		      vector<OmMSetItem> & mset)
-{
-    Assert((allow_add_leafmatch = false) == false);
-    Assert(leaves.size() > 0);
-
-    if(leaves.size() == 1) {
-	// Only one mset to get - so get it.
-	(*(leaves.begin()))->boolmatch(first, maxitems, mset);
-    } else if(leaves.size() > 1) {
-	// Need to merge msets.
-	//MSetCmp mcmp(cmp);
-
-	om_doccount lastitem = first + maxitems;
-
-	// Get the first mset
-	(*(leaves.begin()))->boolmatch(0, lastitem, mset);
-
-	if(leaves.size() > 1) {
-	    // Get subsequent msets, and merge each one with the current mset
-	    // FIXME: this approach may be very inefficient - needs attention.
-	    for(vector<LeafMatch *>::iterator leaf = leaves.begin() + 1;
-		leaf != leaves.end(); leaf++) {
-
-		vector<OmMSetItem> sub_mset;
-
-		// Get next mset
-		(*leaf)->boolmatch(0, lastitem, sub_mset);
-
-		DebugMsg("Merging mset of size " << sub_mset.size() <<
-			 " to existing set of size " << mset.size() <<
-			 endl);
-
-		// Merge msets: FIXME - this is likely to be very inefficient
-		vector<OmMSetItem> old_mset;
-		old_mset.swap(mset);
-
-		vector<OmMSetItem>::const_iterator i = old_mset.begin();
-		vector<OmMSetItem>::const_iterator j = sub_mset.begin();
-		while(mset.size() < lastitem &&
-		      i != old_mset.end() && j != sub_mset.end()) {
-		    //if(mcmp(*i, *j)) { FIXME - define mcmp
-		    if(i->did < j->did) {
-			mset.push_back(*i++);
-		    } else {
-			mset.push_back(*j++);
-		    }
-		}
-		while(mset.size() < lastitem &&
-		      i != old_mset.end()) {
-		    mset.push_back(*i++);
-		}
-		while(mset.size() < lastitem &&
-		      j != sub_mset.end()) {
-		    mset.push_back(*j++);
-		}
-	    }
-	}
-
-	// Clear unwanted leading elements.
-	if(first != 0) {
-	    if(mset.size() < first) {
-		mset.clear();
-	    } else if (first > 0) {
-		mset.erase(mset.begin(), mset.begin() + first);
-	    }
-	}
-    }
-}
